Fix overflow on index and responsive

--- a/QwirkApp/client/styles/main.scss
+++ b/QwirkApp/client/styles/main.scss
@@ -15,7 +15,6 @@ html, body {
   height: 100%;
   margin: 0;
   padding: 0;
-  overflow: hidden;
 }
 
 body {
@@ -49,6 +48,10 @@ button {
 
 .max-height {
   height: 100vh;
+}
+
+.no-overflow {
+  overflow: hidden;
 }
 
 .new-message-tag {
